# augmentationer

./: LICENSE  README.md  pyproject.toml  rotation_test.py  test.py
labels/: image.txt  image2.txt
output/labels/: image2_augmentation.txt  image2_augmentation_1.txt  image2_augmentation_2.txt  image2_augmentation_3.txt  image_augmentation.txt  image_augmentation_1.txt  image_augmentation_2.txt  image_augmentation_3.txt
src/augmentationer/: __init__.py  augmentationer.py  function.py  visualizer.py
