[tool.poetry]
name = "augmentationer"
version = "0.4.2"
description = ""
authors = ["hyeonho cho <111675679+aesthetics-of-record@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "augmentationer", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.10.0.84"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
